--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-  "cSpell.words": [
-    "ksecondary"
-  ]
+  "editor.wordWrap": "on",
+  "workbench.quickOpen.preserveInput": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true,
+    "source.organizeImports": true,
+  },
+  "terminal.integrated.commandsToSkipShell": [
+    "editor.action.quickFix                                    "
+  ],
 }
